2005-05-11  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpuimanager.c (gimp_ui_manager_find_action): allow
	to pass a NULL group_name and iterate all action groups to find
	the action in that case.

	* app/widgets/gimpcontrollereditor.c: show the action's stock icon
	in the "Action" column, using above function.

2005-05-11  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplay.c: added a read-only property to access
	the display-shell w/o having to include gimpdisplay.h.

2005-05-11  Michael Natterer  <mitch@gimp.org>

	Some dock refactoring which separates the docking logic from
	active image and UI manager stuff:

	* app/widgets/gimpmenudock.[ch]: new widget renamed from
	GimpImageDock, zero changes except the name change.

	* app/widgets/gimpimagedock.[ch]: new widget derived from
	GimpDock. Keeps the UI manager.

	* app/widgets/gimpdock.[ch]: removed the UI manager. GimpDock only
	contains the basic docking logic again.

	* app/widgets/gimpmenudock.[ch]
	* app/widgets/gimptoolbox.[ch]: derive them from GimpImageDock.

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/actions/dialogs-commands.c
	* app/actions/dock-actions.c
	* app/actions/dock-commands.c
	* app/actions/dockable-commands.c
	* app/dialogs/dialogs-constructors.c: changed accordingly.

2005-05-11  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.c (gimp_display_shell_scale):
	also zoom on mouse position if the event originates from the canvas
	(see bug #79384).

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): replaced a g_warning()
	with g_return_if_fail().

2005-05-11  Simon Budig  <simon@gimp.org>

	* app/tools/gimpvectortool.c: reset the vector tool to Design
	mode whenever a new vectors object gets connected to the tool.

	Attempt to fix #300663, please report there if you like / dislike
	the new behaviour.

2005-05-11  Sven Neumann  <sven@gimp.org>
