@@ -1,3 +1,8 @@
+2005-05-11  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/jpeg/jpeg-exif.c (jpeg_query): split the message into
+	primary and secondary label.
+
 2005-05-11  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpuimanager.c (gimp_ui_manager_find_action): allow
